--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ chrono = { version = "0.4", features = ["serde"] }
 anyhow = "1.0"
 thiserror = "2.0.17"
 dirs = "6.0.0"
+comfy-table = "7.1"
 
 [dev-dependencies]
 tempfile = "3.8"
