--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
-authors = ["hiro08gh <hiro08gh@gmail.com>"]
 name = "alx"
 description = "Setup simple alias manager"
+authors = ["hiro08gh <hiro08gh@gmail.com>"]
 version = "0.1.0"
 license = "MIT"
 categories = ["command-line-utilities"]
 repository = "https://github.com/hiro08gh/alx"
 edition = "2024"
+rust-version = "1.91.1"
 
 [[bin]]
 name = "alx"
@@ -21,6 +22,7 @@ chrono = { version = "0.4", features = ["serde"] }
 anyhow = "1.0"
 thiserror = "2.0.17"
 dirs = "6.0.0"
+comfy-table = "7.1"
 
 [dev-dependencies]
 tempfile = "3.8"
