--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ anyhow = "1.0"
 thiserror = "2.0.17"
 dirs = "6.0.0"
 comfy-table = "7.1"
+dialoguer = "0.12.0"
 
 [dev-dependencies]
 tempfile = "3.8"
